// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test (MySQL) 1`] = `
Object {
  "Outputs": Object {
    "DBDBLambdaName9BE615E1": Object {
      "Value": Object {
        "Ref": "DBDbDefiner53C1CCFA",
      },
    },
  },
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "DBAuroraCluster6C1914EB": Object {
      "DeletionPolicy": "Snapshot",
      "Properties": Object {
        "CopyTagsToSnapshot": true,
        "DBClusterParameterGroupName": "default.aurora-mysql5.7",
        "DBSubnetGroupName": Object {
          "Ref": "DBAuroraClusterSubnets6F7FAD49",
        },
        "DatabaseName": "prototype",
        "Engine": "aurora-mysql",
        "EngineVersion": "5.7.12",
        "MasterUserPassword": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{{resolve:secretsmanager:",
              Object {
                "Ref": "DBAuroraClusterSecret7FC04250",
              },
              ":SecretString:password::}}",
            ],
          ],
        },
        "MasterUsername": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{{resolve:secretsmanager:",
              Object {
                "Ref": "DBAuroraClusterSecret7FC04250",
              },
              ":SecretString:username::}}",
            ],
          ],
        },
        "StorageEncrypted": true,
        "VpcSecurityGroupIds": Array [
          Object {
            "Fn::GetAtt": Array [
              "DBAuroraClusterSecurityGroup0B50A54B",
              "GroupId",
            ],
          },
        ],
      },
      "Type": "AWS::RDS::DBCluster",
      "UpdateReplacePolicy": "Snapshot",
    },
    "DBAuroraClusterInstance137198F02": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "VpcdbSubnet1RouteTableAssociation3FF66701",
        "VpcdbSubnet2RouteTableAssociation3D000840",
      ],
      "Properties": Object {
        "DBClusterIdentifier": Object {
          "Ref": "DBAuroraCluster6C1914EB",
        },
        "DBInstanceClass": "db.t3.medium",
        "DBSubnetGroupName": Object {
          "Ref": "DBAuroraClusterSubnets6F7FAD49",
        },
        "Engine": "aurora-mysql",
        "PubliclyAccessible": false,
      },
      "Type": "AWS::RDS::DBInstance",
      "UpdateReplacePolicy": "Delete",
    },
    "DBAuroraClusterSecret7FC04250": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Generated by the CDK for stack: ",
              Object {
                "Ref": "AWS::StackName",
              },
            ],
          ],
        },
        "GenerateSecretString": Object {
          "ExcludeCharacters": " %+~\`#$&*()|[]{}:;<>?!'/@\\"\\\\",
          "GenerateStringKey": "password",
          "PasswordLength": 30,
          "SecretStringTemplate": "{\\"username\\":\\"admin\\"}",
        },
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "DBAuroraClusterSecretAttachment0EBC6996": Object {
      "Properties": Object {
        "SecretId": Object {
          "Ref": "DBAuroraClusterSecret7FC04250",
        },
        "TargetId": Object {
          "Ref": "DBAuroraCluster6C1914EB",
        },
        "TargetType": "AWS::RDS::DBCluster",
      },
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
    },
    "DBAuroraClusterSecurityGroup0B50A54B": Object {
      "Properties": Object {
        "GroupDescription": "RDS security group",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": Object {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "DBAuroraClusterSecurityGroupfromIndirectPeerIndirectPortFF42F222": Object {
      "Properties": Object {
        "CidrIp": Object {
          "Fn::GetAtt": Array [
            "Vpc8378EB38",
            "CidrBlock",
          ],
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "from ",
              Object {
                "Fn::GetAtt": Array [
                  "Vpc8378EB38",
                  "CidrBlock",
                ],
              },
              ":{IndirectPort}",
            ],
          ],
        },
        "FromPort": Object {
          "Fn::GetAtt": Array [
            "DBAuroraCluster6C1914EB",
            "Endpoint.Port",
          ],
        },
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "DBAuroraClusterSecurityGroup0B50A54B",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": Object {
          "Fn::GetAtt": Array [
            "DBAuroraCluster6C1914EB",
            "Endpoint.Port",
          ],
        },
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "DBAuroraClusterSubnets6F7FAD49": Object {
      "Properties": Object {
        "DBSubnetGroupDescription": "Subnets for AuroraCluster database",
        "SubnetIds": Array [
          Object {
            "Ref": "VpcdbSubnet1Subnet1B82B149",
          },
          Object {
            "Ref": "VpcdbSubnet2Subnet01192A3B",
          },
        ],
      },
      "Type": "AWS::RDS::DBSubnetGroup",
    },
    "DBDbDefiner53C1CCFA": Object {
      "DependsOn": Array [
        "DBDbDefinerServiceRoleDefaultPolicyD749A5B1",
        "DBDbDefinerServiceRole0A183E3A",
        "VpcdbSubnet1RouteTableAssociation3FF66701",
        "VpcdbSubnet2RouteTableAssociation3D000840",
      ],
      "Properties": Object {
        "Code": Object {
          "ImageUri": Object {
            "Fn::Sub": "\${AWS::AccountId}.dkr.ecr.\${AWS::Region}.\${AWS::URLSuffix}/cdk-hnb659fds-container-assets-\${AWS::AccountId}-\${AWS::Region}:3784665ef24e4f002c931fbccf11b94b86d444ddc1051e144ca234887e92fc1d",
          },
        },
        "Environment": Object {
          "Variables": Object {
            "DB_ENGINE_FAMILY": "MYSQL",
            "DB_NAME": "prototype",
            "DB_SECRET_NAME": Object {
              "Fn::Join": Array [
                "-",
                Array [
                  Object {
                    "Fn::Select": Array [
                      0,
                      Object {
                        "Fn::Split": Array [
                          "-",
                          Object {
                            "Fn::Select": Array [
                              6,
                              Object {
                                "Fn::Split": Array [
                                  ":",
                                  Object {
                                    "Ref": "DBAuroraClusterSecret7FC04250",
                                  },
                                ],
                              },
                            ],
                          },
                        ],
                      },
                    ],
                  },
                  Object {
                    "Fn::Select": Array [
                      1,
                      Object {
                        "Fn::Split": Array [
                          "-",
                          Object {
                            "Fn::Select": Array [
                              6,
                              Object {
                                "Fn::Split": Array [
                                  ":",
                                  Object {
                                    "Ref": "DBAuroraClusterSecret7FC04250",
                                  },
                                ],
                              },
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              ],
            },
          },
        },
        "MemorySize": 256,
        "PackageType": "Image",
        "Role": Object {
          "Fn::GetAtt": Array [
            "DBDbDefinerServiceRole0A183E3A",
            "Arn",
          ],
        },
        "Timeout": 300,
        "VpcConfig": Object {
          "SecurityGroupIds": Array [
            Object {
              "Fn::GetAtt": Array [
                "DBDbDefinerSecurityGroupB9883C5F",
                "GroupId",
              ],
            },
          ],
          "SubnetIds": Array [
            Object {
              "Ref": "VpcdbSubnet1Subnet1B82B149",
            },
            Object {
              "Ref": "VpcdbSubnet2Subnet01192A3B",
            },
          ],
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "DBDbDefinerSecurityGroupB9883C5F": Object {
      "DependsOn": Array [
        "VpcdbSubnet1RouteTableAssociation3FF66701",
        "VpcdbSubnet2RouteTableAssociation3D000840",
      ],
      "Properties": Object {
        "GroupDescription": "Automatic security group for Lambda Function MyTestStackDBDbDefinerAE96A2A5",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": Object {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "DBDbDefinerServiceRole0A183E3A": Object {
      "DependsOn": Array [
        "VpcdbSubnet1RouteTableAssociation3FF66701",
        "VpcdbSubnet2RouteTableAssociation3D000840",
      ],
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DBDbDefinerServiceRoleDefaultPolicyD749A5B1": Object {
      "DependsOn": Array [
        "VpcdbSubnet1RouteTableAssociation3FF66701",
        "VpcdbSubnet2RouteTableAssociation3D000840",
      ],
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Ref": "DBAuroraClusterSecretAttachment0EBC6996",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "DBDbDefinerServiceRoleDefaultPolicyD749A5B1",
        "Roles": Array [
          Object {
            "Ref": "DBDbDefinerServiceRole0A183E3A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DBVpcEndpointC4B3F5A0": Object {
      "Properties": Object {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": Array [
          Object {
            "Fn::GetAtt": Array [
              "DBVpcEndpointSecurityGroupFF7ED50F",
              "GroupId",
            ],
          },
        ],
        "ServiceName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "com.amazonaws.",
              Object {
                "Ref": "AWS::Region",
              },
              ".secretsmanager",
            ],
          ],
        },
        "SubnetIds": Array [
          Object {
            "Ref": "VpcdbSubnet1Subnet1B82B149",
          },
          Object {
            "Ref": "VpcdbSubnet2Subnet01192A3B",
          },
        ],
        "VpcEndpointType": "Interface",
        "VpcId": Object {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::VPCEndpoint",
    },
    "DBVpcEndpointSecurityGroupFF7ED50F": Object {
      "Properties": Object {
        "GroupDescription": "MyTestStack/DB/VpcEndpoint/SecurityGroup",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "SecurityGroupIngress": Array [
          Object {
            "CidrIp": Object {
              "Fn::GetAtt": Array [
                "Vpc8378EB38",
                "CidrBlock",
              ],
            },
            "Description": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "from ",
                  Object {
                    "Fn::GetAtt": Array [
                      "Vpc8378EB38",
                      "CidrBlock",
                    ],
                  },
                  ":443",
                ],
              ],
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "VpcId": Object {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "Vpc8378EB38": Object {
      "Properties": Object {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "MyTestStack/Vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "VpcdbSubnet1RouteTable04184FDD": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "MyTestStack/Vpc/dbSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcdbSubnet1RouteTableAssociation3FF66701": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "VpcdbSubnet1RouteTable04184FDD",
        },
        "SubnetId": Object {
          "Ref": "VpcdbSubnet1Subnet1B82B149",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcdbSubnet1Subnet1B82B149": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            0,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.0.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "db",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          Object {
            "Key": "Name",
            "Value": "MyTestStack/Vpc/dbSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcdbSubnet2RouteTable7BBEF14D": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "MyTestStack/Vpc/dbSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcdbSubnet2RouteTableAssociation3D000840": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "VpcdbSubnet2RouteTable7BBEF14D",
        },
        "SubnetId": Object {
          "Ref": "VpcdbSubnet2Subnet01192A3B",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcdbSubnet2Subnet01192A3B": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            1,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.1.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "db",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          Object {
            "Key": "Name",
            "Value": "MyTestStack/Vpc/dbSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Snapshot test (Postgres) 1`] = `
Object {
  "Outputs": Object {
    "DBDBLambdaName9BE615E1": Object {
      "Value": Object {
        "Ref": "DBDbDefiner53C1CCFA",
      },
    },
  },
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "DBAuroraCluster6C1914EB": Object {
      "DeletionPolicy": "Snapshot",
      "Properties": Object {
        "CopyTagsToSnapshot": true,
        "DBClusterParameterGroupName": "default.aurora-postgresql13",
        "DBSubnetGroupName": Object {
          "Ref": "DBAuroraClusterSubnets6F7FAD49",
        },
        "DatabaseName": "prototype",
        "Engine": "aurora-postgresql",
        "EngineVersion": "13.4",
        "MasterUserPassword": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{{resolve:secretsmanager:",
              Object {
                "Ref": "DBAuroraClusterSecret7FC04250",
              },
              ":SecretString:password::}}",
            ],
          ],
        },
        "MasterUsername": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{{resolve:secretsmanager:",
              Object {
                "Ref": "DBAuroraClusterSecret7FC04250",
              },
              ":SecretString:username::}}",
            ],
          ],
        },
        "Port": 5432,
        "StorageEncrypted": true,
        "VpcSecurityGroupIds": Array [
          Object {
            "Fn::GetAtt": Array [
              "DBAuroraClusterSecurityGroup0B50A54B",
              "GroupId",
            ],
          },
        ],
      },
      "Type": "AWS::RDS::DBCluster",
      "UpdateReplacePolicy": "Snapshot",
    },
    "DBAuroraClusterInstance137198F02": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "VpcdbSubnet1RouteTableAssociation3FF66701",
        "VpcdbSubnet2RouteTableAssociation3D000840",
      ],
      "Properties": Object {
        "DBClusterIdentifier": Object {
          "Ref": "DBAuroraCluster6C1914EB",
        },
        "DBInstanceClass": "db.t3.medium",
        "DBSubnetGroupName": Object {
          "Ref": "DBAuroraClusterSubnets6F7FAD49",
        },
        "Engine": "aurora-postgresql",
        "PubliclyAccessible": false,
      },
      "Type": "AWS::RDS::DBInstance",
      "UpdateReplacePolicy": "Delete",
    },
    "DBAuroraClusterSecret7FC04250": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Generated by the CDK for stack: ",
              Object {
                "Ref": "AWS::StackName",
              },
            ],
          ],
        },
        "GenerateSecretString": Object {
          "ExcludeCharacters": " %+~\`#$&*()|[]{}:;<>?!'/@\\"\\\\",
          "GenerateStringKey": "password",
          "PasswordLength": 30,
          "SecretStringTemplate": "{\\"username\\":\\"postgres\\"}",
        },
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "DBAuroraClusterSecretAttachment0EBC6996": Object {
      "Properties": Object {
        "SecretId": Object {
          "Ref": "DBAuroraClusterSecret7FC04250",
        },
        "TargetId": Object {
          "Ref": "DBAuroraCluster6C1914EB",
        },
        "TargetType": "AWS::RDS::DBCluster",
      },
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
    },
    "DBAuroraClusterSecurityGroup0B50A54B": Object {
      "Properties": Object {
        "GroupDescription": "RDS security group",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": Object {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "DBAuroraClusterSecurityGroupfromIndirectPeerIndirectPortFF42F222": Object {
      "Properties": Object {
        "CidrIp": Object {
          "Fn::GetAtt": Array [
            "Vpc8378EB38",
            "CidrBlock",
          ],
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "from ",
              Object {
                "Fn::GetAtt": Array [
                  "Vpc8378EB38",
                  "CidrBlock",
                ],
              },
              ":{IndirectPort}",
            ],
          ],
        },
        "FromPort": Object {
          "Fn::GetAtt": Array [
            "DBAuroraCluster6C1914EB",
            "Endpoint.Port",
          ],
        },
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "DBAuroraClusterSecurityGroup0B50A54B",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": Object {
          "Fn::GetAtt": Array [
            "DBAuroraCluster6C1914EB",
            "Endpoint.Port",
          ],
        },
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "DBAuroraClusterSubnets6F7FAD49": Object {
      "Properties": Object {
        "DBSubnetGroupDescription": "Subnets for AuroraCluster database",
        "SubnetIds": Array [
          Object {
            "Ref": "VpcdbSubnet1Subnet1B82B149",
          },
          Object {
            "Ref": "VpcdbSubnet2Subnet01192A3B",
          },
        ],
      },
      "Type": "AWS::RDS::DBSubnetGroup",
    },
    "DBDbDefiner53C1CCFA": Object {
      "DependsOn": Array [
        "DBDbDefinerServiceRoleDefaultPolicyD749A5B1",
        "DBDbDefinerServiceRole0A183E3A",
        "VpcdbSubnet1RouteTableAssociation3FF66701",
        "VpcdbSubnet2RouteTableAssociation3D000840",
      ],
      "Properties": Object {
        "Code": Object {
          "ImageUri": Object {
            "Fn::Sub": "\${AWS::AccountId}.dkr.ecr.\${AWS::Region}.\${AWS::URLSuffix}/cdk-hnb659fds-container-assets-\${AWS::AccountId}-\${AWS::Region}:3784665ef24e4f002c931fbccf11b94b86d444ddc1051e144ca234887e92fc1d",
          },
        },
        "Environment": Object {
          "Variables": Object {
            "DB_ENGINE_FAMILY": "POSTGRESQL",
            "DB_NAME": "prototype",
            "DB_SECRET_NAME": Object {
              "Fn::Join": Array [
                "-",
                Array [
                  Object {
                    "Fn::Select": Array [
                      0,
                      Object {
                        "Fn::Split": Array [
                          "-",
                          Object {
                            "Fn::Select": Array [
                              6,
                              Object {
                                "Fn::Split": Array [
                                  ":",
                                  Object {
                                    "Ref": "DBAuroraClusterSecret7FC04250",
                                  },
                                ],
                              },
                            ],
                          },
                        ],
                      },
                    ],
                  },
                  Object {
                    "Fn::Select": Array [
                      1,
                      Object {
                        "Fn::Split": Array [
                          "-",
                          Object {
                            "Fn::Select": Array [
                              6,
                              Object {
                                "Fn::Split": Array [
                                  ":",
                                  Object {
                                    "Ref": "DBAuroraClusterSecret7FC04250",
                                  },
                                ],
                              },
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              ],
            },
          },
        },
        "MemorySize": 256,
        "PackageType": "Image",
        "Role": Object {
          "Fn::GetAtt": Array [
            "DBDbDefinerServiceRole0A183E3A",
            "Arn",
          ],
        },
        "Timeout": 300,
        "VpcConfig": Object {
          "SecurityGroupIds": Array [
            Object {
              "Fn::GetAtt": Array [
                "DBDbDefinerSecurityGroupB9883C5F",
                "GroupId",
              ],
            },
          ],
          "SubnetIds": Array [
            Object {
              "Ref": "VpcdbSubnet1Subnet1B82B149",
            },
            Object {
              "Ref": "VpcdbSubnet2Subnet01192A3B",
            },
          ],
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "DBDbDefinerSecurityGroupB9883C5F": Object {
      "DependsOn": Array [
        "VpcdbSubnet1RouteTableAssociation3FF66701",
        "VpcdbSubnet2RouteTableAssociation3D000840",
      ],
      "Properties": Object {
        "GroupDescription": "Automatic security group for Lambda Function MyTestStackDBDbDefinerAE96A2A5",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": Object {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "DBDbDefinerServiceRole0A183E3A": Object {
      "DependsOn": Array [
        "VpcdbSubnet1RouteTableAssociation3FF66701",
        "VpcdbSubnet2RouteTableAssociation3D000840",
      ],
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DBDbDefinerServiceRoleDefaultPolicyD749A5B1": Object {
      "DependsOn": Array [
        "VpcdbSubnet1RouteTableAssociation3FF66701",
        "VpcdbSubnet2RouteTableAssociation3D000840",
      ],
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Ref": "DBAuroraClusterSecretAttachment0EBC6996",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "DBDbDefinerServiceRoleDefaultPolicyD749A5B1",
        "Roles": Array [
          Object {
            "Ref": "DBDbDefinerServiceRole0A183E3A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DBVpcEndpointC4B3F5A0": Object {
      "Properties": Object {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": Array [
          Object {
            "Fn::GetAtt": Array [
              "DBVpcEndpointSecurityGroupFF7ED50F",
              "GroupId",
            ],
          },
        ],
        "ServiceName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "com.amazonaws.",
              Object {
                "Ref": "AWS::Region",
              },
              ".secretsmanager",
            ],
          ],
        },
        "SubnetIds": Array [
          Object {
            "Ref": "VpcdbSubnet1Subnet1B82B149",
          },
          Object {
            "Ref": "VpcdbSubnet2Subnet01192A3B",
          },
        ],
        "VpcEndpointType": "Interface",
        "VpcId": Object {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::VPCEndpoint",
    },
    "DBVpcEndpointSecurityGroupFF7ED50F": Object {
      "Properties": Object {
        "GroupDescription": "MyTestStack/DB/VpcEndpoint/SecurityGroup",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "SecurityGroupIngress": Array [
          Object {
            "CidrIp": Object {
              "Fn::GetAtt": Array [
                "Vpc8378EB38",
                "CidrBlock",
              ],
            },
            "Description": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "from ",
                  Object {
                    "Fn::GetAtt": Array [
                      "Vpc8378EB38",
                      "CidrBlock",
                    ],
                  },
                  ":443",
                ],
              ],
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "VpcId": Object {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "Vpc8378EB38": Object {
      "Properties": Object {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "MyTestStack/Vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "VpcdbSubnet1RouteTable04184FDD": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "MyTestStack/Vpc/dbSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcdbSubnet1RouteTableAssociation3FF66701": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "VpcdbSubnet1RouteTable04184FDD",
        },
        "SubnetId": Object {
          "Ref": "VpcdbSubnet1Subnet1B82B149",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcdbSubnet1Subnet1B82B149": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            0,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.0.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "db",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          Object {
            "Key": "Name",
            "Value": "MyTestStack/Vpc/dbSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcdbSubnet2RouteTable7BBEF14D": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "MyTestStack/Vpc/dbSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcdbSubnet2RouteTableAssociation3D000840": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "VpcdbSubnet2RouteTable7BBEF14D",
        },
        "SubnetId": Object {
          "Ref": "VpcdbSubnet2Subnet01192A3B",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcdbSubnet2Subnet01192A3B": Object {
      "Properties": Object {
        "AvailabilityZone": Object {
          "Fn::Select": Array [
            1,
            Object {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.1.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "db",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          Object {
            "Key": "Name",
            "Value": "MyTestStack/Vpc/dbSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "Vpc8378EB38",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
